[tool.poetry]
name = "gen"
version = "0.0.1"
description = "Package to try out generative ML concepts"
authors = ["eschmidt42 <11818904+eschmidt42@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.5.2"
loguru = "^0.5.3"
pandas = "^1.3.3"
seaborn = "^0.11.2"
lightgbm = "^3.3.0"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.9b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
